--- a/src/app/pages/analysis-page/analysis-page.component.html
+++ b/src/app/pages/analysis-page/analysis-page.component.html
@@ -2,23 +2,23 @@
 <mat-sidenav-container class="sidenav-container">
   <!-- Navigation Bar-->
   <mat-sidenav mode="side" opened class="sidenav">
-    <div class="navlogo">
+    <div class="navlogo" [routerLink]="['/event-mgmt']">
       <img src="assets/logo.png" width="40" height="30"/>
       <div class="navlogo-text">
         Smart Event
       </div>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'home']">Schedule</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'home']">Home</button>
     </div>
-    <!-- <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'speaker']">Speaker</button>
-    </div> -->
+    <div class="sidediv" >
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'schedule']">Schedule</button>
+    </div>
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'attendees']">Attendees</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'map']">Locations</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'map']">Map Settings</button>
     </div>
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'go-live']">Go Live</button>
@@ -26,24 +26,11 @@
     <div class="sidediv" >
       <button mat-raised-button class="sidebutton" color="primary" [routerLink]="['/',eventId,'analysis']">Analysis</button>
     </div>
-
-    <div class="bottom-nav">
-      <button mat-button class="back-hint" [routerLink] = "['/event-mgmt']">
-        Other Events
-      </button>
-      <button mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon class="profile-icon">perm_identity</mat-icon>
-      </button>
-      <mat-menu #menu="matMenu" [overlapTrigger]="false">
-        <button mat-menu-item [routerLink] = "['/change-pwd']">Change Password</button>
-        <button mat-menu-item [routerLink] = "['/login']">Log out</button>
-      </mat-menu>
-    </div>
-
   </mat-sidenav>
 
   <!-- Main Content-->
   <mat-sidenav-content class="sidenav-content">
+    <app-toolbar></app-toolbar>
     <!-- <button mat-button>Close All</button> -->
     <mat-accordion [multi]="true">
       <mat-expansion-panel [expanded]="false">
