--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -4,23 +4,23 @@
 <!-- Navigation Bar -->
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav mode="side" opened class="sidenav">
-    <div class="navlogo">
+    <div class="navlogo" [routerLink]="['/event-mgmt']">
       <img src="assets/logo.png" width="40" height="30"/>
       <div class="navlogo-text">
         Smart Event
       </div>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'home']">Schedule</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'home']">Home</button>
     </div>
-    <!-- <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'speaker']">Speaker</button>
-    </div> -->
+    <div class="sidediv" >
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'schedule']">Schedule</button>
+    </div>
     <div class="sidediv" >
       <button mat-raised-button color="primary" class="sidebutton" [routerLink]="['/',eventId,'attendees']">Attendees</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'map']">Locations</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'map']">Map Settings</button>
     </div>
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'go-live']">Go Live</button>
@@ -28,33 +28,22 @@
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'analysis']">Analysis</button>
     </div>
-
-    <div class="bottom-nav">
-      <button mat-button class="back-hint" [routerLink] = "['/event-mgmt']">
-        Other Events
-      </button>
-      <button mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon class="profile-icon">perm_identity</mat-icon>
-      </button>
-      <mat-menu #menu="matMenu" [overlapTrigger]="false">
-        <button mat-menu-item [routerLink] = "['/change-pwd']">Change Password</button>
-        <button mat-menu-item [routerLink] = "['/login']">Log out</button>
-      </mat-menu>
-    </div>
-
   </mat-sidenav>
 
   <!-- main content -->
   <mat-sidenav-content class="sidenav-content">
+    <app-toolbar></app-toolbar>
     <div class="page-container">
+      <h3>Attendee List</h3>
       <!-- Add New Attendee Button-->
-      <button class="addNewBotton" mat-raised-button color="primary" [routerLink]="['/',eventId,'attendee-profile']"> + New Attendee </button>
-      <br>
+      <div class="Add-and-Search">
+        <button mat-raised-button color="accent" [routerLink]="['/',eventId,'attendee-profile']"> + New Attendee </button>
+        <!-- <mat-form-field class="search">
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search Attendee">
+        </mat-form-field> -->
+      </div>
+      <br />
 
-      <!-- table view-->
-      <!-- <mat-form-field>
-        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-      </mat-form-field> -->
       <mat-table #table [dataSource]="attendeeList">
         <ng-container matColumnDef="avatar">
           <mat-header-cell *matHeaderCellDef> Photo </mat-header-cell>
@@ -87,7 +76,7 @@
         <ng-container matColumnDef="actions">
           <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
           <mat-cell *matCellDef="let element">
-            <button mat-mini-fab class="edit-dele-button" color="warn" (click)="deleteAttendee(element.participantName)">
+            <button mat-stroked-button class="edit-dele-button" color="warn" (click)="deleteAttendee(element.participantName)">
                      Delete
             </button>
           </mat-cell>
