--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -2,36 +2,16 @@
     // border-bottom: solid 1px lightgray;
     position: fixed;
     top: 0;
-    left:0;
     width:100%;
-    height: 3em;
+    height: 2.4em;
     z-index:100;
+    background-color: #77878c;
+    color: white;
+    box-shadow: 0px -20px 20px 0px rgba(0, 0, 0, 0.14), 0px -20px 20px 0px rgba(0, 0, 0, 0.12), 0px 5px 20px 0px rgba(0, 0, 0, 0.3);
 
-    .front-spacer{
-      flex: 0.1;
-    }
-    .searchBar{
-      .icon{
-        height: 100%;
-      }
-      .input{
-        width: 5em;
-      }
-    }
-    .navMenu{
-      width: 10em;
-    }
-    .front-spacer{
-      flex: 1 1 auto;
-    }
-    .back-hint{
-      font-size: 0.6em;
-      font-weight: 100;
-      font-style: italic;
-      padding-right: 1.1em;
-    }
-    .profile-icon{
-      font-size: 2em;
-      top: 0;
+
+    .end-buttons{
+      position: fixed;
+      right: 0;
     }
 }
