--- a/src/app/pages/attendee-profile/attendee-profile.component.html
+++ b/src/app/pages/attendee-profile/attendee-profile.component.html
@@ -10,27 +10,28 @@
       </div>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/home']">Schedule</button>
-    </div>
-    <!-- <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/speaker']">Speaker</button>
-    </div> -->
-    <div class="sidediv" >
-      <button mat-raised-button color="primary" class="sidebutton" [routerLink]="['/attendees']">Attendees</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'home']">Home</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/map']">Locations</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'schedule']">Schedule</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/go-live']">Go Live</button>
+      <button mat-raised-button color="primary" class="sidebutton" [routerLink]="['/',eventId,'attendees']">Attendees</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/analysis']">Analysis</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'map']">Map Settings</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'go-live']">Go Live</button>
+    </div>
+    <div class="sidediv" >
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'analysis']">Analysis</button>
     </div>
   </mat-sidenav>
 
   <!-- Main Content-->
   <mat-sidenav-content class="sidenav-content">
+    <app-toolbar></app-toolbar>
     <div class="page">
       <!-- Back Button-->
       <div class="header">
