--- a/src/app/pages/attendee-profile/attendee-profile.component.scss
+++ b/src/app/pages/attendee-profile/attendee-profile.component.scss
@@ -52,12 +52,9 @@
     }
 }
 .sidenav-content{
-  //margin-top:3em;
-  .header{
-    margin:auto 2em auto 2em;
-  }
-  .mat-card{
-    margin:auto 2em auto 2em;
+  margin-top:3em;
+  .page{
+    margin: 1em;
   }
 }
 
