--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.scss
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.scss
@@ -5,8 +5,51 @@
   right: 0;
   bottom: 0;
 }
+.toolbar{
+    // border-bottom: solid 1px lightgray;
+    position: fixed;
+    top: 0;
+    width:100%;
+    height: 2.4em;
+    z-index:100;
+    background-color: #77878c;
+    color: white;
+    box-shadow: 0px -20px 20px 0px rgba(0, 0, 0, 0.14), 0px -20px 20px 0px rgba(0, 0, 0, 0.12), 0px 5px 20px 0px rgba(0, 0, 0, 0.3);
+
+    .navlogo{
+      position: fixed;
+      height: inherit;
+      left: 0;
+      color: #335C67;
+      display: flex;
+      background-color: white;
+      img{
+        margin: auto;
+      }
+      .navlogo-text{
+        line-height: 2.4em;
+        height: 2.4em;
+        width: 8.5em;
+        color: #335C67;
+        text-align: center;
+        margin: auto;
+        font-weight: 700;
+        font-size:16px;
+      }
+    }
+
+    .end-buttons{
+      position: fixed;
+      right: 0;
+      .profile-icon{
+        color: white;
+        height: 2em;
+      }
+    }
+}
 .page{
   margin-top: 3em;
+  background-color: #fafafa;
 }
 .top-btn{
     float:right;
@@ -25,74 +68,7 @@
     top: 0.3em;
 }
 
-.grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: center;
-    align-items: center;
-    padding: 4em 10em;
-    .card{
-        .material-icons{
-            color: gray;
-        }
-        position: relative;
-        width: 16em;
-        margin: 2em 0;
-        height: 12em;
-        .event-icon{
-            cursor: pointer;
-            &:hover{
-                background-color: green;
-            }
-            color: white;
-            font-size: 3em;
-            position: absolute;
-            top: -0.6em;
-            background-color: #8BC34A;
-            box-shadow: 1px 1px 1px 1px lightgrey;
-            border-radius: 6px;
-            padding: 0.4em;
-        }
-        .event-title{
-            font-weight: 200;
-            text-align: right;
-            font-size: 2em;
-            border-bottom: solid 1px gray;
-            padding: 0.3em 0;
-            color: gray;
-        }
-        .content{
-            style: none;
-            th{
-                font-weight: 300;
-                text-align: right;
-                vertical-align: top;
-            }
-        }
-        .foot{
-            text-align: right;
-        }
-    }
-    .add-event{
-        width: 18em;
-        height: 14em;
-        border-radius: 2em;
-        border: dashed lightgrey 0.4em;
-        &:hover{
-            border-color: gray;
-        }
-        cursor: pointer;
-        .plus{
-            font-size: 10em;
-            color: lightgrey;
-            &:hover{
-                color: gray;
-            }
-            padding: 0.1em;
-            text-align: center;
-        }
-    }
-}
+
 
 .list {
   display: flex;
