--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,24 +1,22 @@
-<!-- <app-toolbar [pageName] = "pageName"></app-toolbar> -->
-
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav mode="side" opened class="sidenav">
-    <div class="navlogo">
+    <div class="navlogo" [routerLink]="['/event-mgmt']">
       <img src="assets/logo.png" width="40" height="30"/>
       <div class="navlogo-text">
         Smart Event
       </div>
     </div>
     <div class="sidediv" >
-      <button mat-raised-button class="chosenButton" [routerLink]="['/',eventId,'home']">Schedule</button>
+      <button mat-raised-button class="chosenButton" [routerLink]="['/',eventId,'home']">Home</button>
     </div>
-    <!-- <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'speaker']">Speaker</button>
-    </div> -->
+    <div class="sidediv" >
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'schedule']">Schedule</button>
+    </div>
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'attendees']">Attendees</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'map']">Locations</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'map']">Map Settings</button>
     </div>
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'go-live']">Go Live</button>
@@ -27,7 +25,7 @@
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'analysis']">Analysis</button>
     </div>
 
-    <div class="bottom-nav">
+    <!-- <div class="bottom-nav">
       <button mat-button class="back-hint" [routerLink] = "['/event-mgmt']">
         Other Events
       </button>
@@ -38,43 +36,15 @@
         <button mat-menu-item [routerLink] = "['/change-pwd']">Change Password</button>
         <button mat-menu-item [routerLink] = "['/login']">Log out</button>
       </mat-menu>
-    </div>
+    </div> -->
 
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
+    <app-toolbar></app-toolbar>
       <div class="page-container">
-        <h3>Event Schedule</h3>
-        <div class="schedule-div">
-          <!-- <img src="assets/schedule.png"> -->
-
-          <button mat-raised-button color="primary" [routerLink]="['/',eventId,'home','add-schedule']">Add Schedule</button><br />
-          <br />
-          <!-- load schedule from db -->
-          <mat-table #table [dataSource]="dataSource">
-            <ng-container matColumnDef="StartTime">
-              <mat-header-cell *matHeaderCellDef> StartTime </mat-header-cell>
-              <mat-cell *matCellDef="let element"> {{element.startTime}} </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="EndTime">
-              <mat-header-cell *matHeaderCellDef> EndTime </mat-header-cell>
-              <mat-cell *matCellDef="let element"> {{element.endTime}} </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="Description">
-              <mat-header-cell *matHeaderCellDef> Name/Description </mat-header-cell>
-              <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="Actions">
-              <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
-              <mat-cell *matCellDef="let element">
-                <button mat-stroked-button class="edit-dele-button" color="warn" (click)="deleteSchedule(element.scheduleId)">
-                         Delete
-                </button>
-              </mat-cell>
-            </ng-container>
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-          </mat-table>
-        </div>
+        <h3>Home</h3>
+        <button mat-raised-button color="accent">Start Event</button>
+        <button mat-raised-button color="accent">End Event</button>
       </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
