--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -44,14 +44,14 @@
       }
   }
   .bottom-nav{
-    position: absolute;
+    position: fixed;
     bottom: 0;
     display: flex;
     flex-direction: column;
     }
 }
 .sidenav-content{
-  //margin-top:3em;
+  margin-top:3em;
   .page-container{
     margin: 1em;
     width: 100%;
