--- a/src/app/components/analysis-heatmap/analysis-heatmap.component.css
+++ b/src/app/components/analysis-heatmap/analysis-heatmap.component.css
@@ -5,3 +5,9 @@
   position:relative;
   /* background-color:black; */
 }
+.animated-point{
+  width: 10px;
+  height: 10px;
+  border: 1px solid black;
+  border-radius: 100%;
+}
