--- a/src/app/components/analysis-heatmap/analysis-heatmap.component.html
+++ b/src/app/components/analysis-heatmap/analysis-heatmap.component.html
@@ -12,6 +12,15 @@
   <div>
     {{scheduleName}}
   </div>
+  <button (click)="playAnalysis()">Play</button>
+  <!-- <div class="time-line">
+    <div class="time-point" *ngFor="let timePoint of schedulesArray">
+      <div class="animated-point">
+
+      </div>
+    </div>
+  </div> -->
+
 
   <div class="heatmap" id="map-canvas" style="width:900px;height:600px;border:2px solid;">
   </div>
