--- a/src/app/components/treemap-country/treemap-country.component.html
+++ b/src/app/components/treemap-country/treemap-country.component.html
@@ -4,5 +4,6 @@
     [view]="countryView"
     [results]="country"
     [customColors]="customColors"
+    [valueFormatting]="formatCountry"
   ></ngx-charts-tree-map>
 </div>
