--- a/src/app/pages/analysis-page/analysis-page.component.html
+++ b/src/app/pages/analysis-page/analysis-page.component.html
@@ -115,7 +115,8 @@
             [showXAxisLabel]  = "true"
             [showYAxisLabel]= "true"
             [xAxisLabel] = "'Number of participants'"
-            [yAxisLabel]="'Job Level'">
+            [yAxisLabel]="'Job Level'"
+            [xAxisTickFormatting]="formatJobLevel">
           </ngx-charts-bar-horizontal>
         </div>
 
