--- a/src/app/pages/analysis-page/analysis-page.component.html
+++ b/src/app/pages/analysis-page/analysis-page.component.html
@@ -30,7 +30,7 @@
 
   <!-- Main Content-->
   <mat-sidenav-content class="sidenav-content">
-    <app-toolbar></app-toolbar>
+    <app-toolbar [eventStatus]=eventStatus></app-toolbar>
     <!-- <button mat-button>Close All</button> -->
     <mat-accordion [multi]="true">
       <mat-expansion-panel [expanded]="false">
