--- a/src/app/pages/attendee-profile/attendee-profile.component.html
+++ b/src/app/pages/attendee-profile/attendee-profile.component.html
@@ -31,7 +31,7 @@
 
   <!-- Main Content-->
   <mat-sidenav-content class="sidenav-content">
-    <app-toolbar></app-toolbar>
+    <app-toolbar [eventStatus]=eventStatus></app-toolbar>
     <div class="page">
       <!-- Back Button-->
       <div class="header">
