--- a/src/app/pages/schedule-page/schedule-page.component.html
+++ b/src/app/pages/schedule-page/schedule-page.component.html
@@ -26,9 +26,9 @@
     </div>
   </mat-sidenav>
 
-  
+
   <mat-sidenav-content class="sidenav-content">
-    <app-toolbar></app-toolbar>
+    <app-toolbar [eventStatus]=eventStatus></app-toolbar>
       <div class="page-container">
         <h3>Event Schedule</h3>
         <div>
