--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -32,7 +32,7 @@
 
   <!-- main content -->
   <mat-sidenav-content class="sidenav-content">
-    <app-toolbar></app-toolbar>
+    <app-toolbar [eventStatus]=eventStatus></app-toolbar>
     <div class="page-container">
       <h3>Attendee List</h3>
       <!-- Add New Attendee Button-->
