--- a/src/app/components/treemap-industry/treemap-industry.component.html
+++ b/src/app/components/treemap-industry/treemap-industry.component.html
@@ -4,5 +4,6 @@
     [view]="industryView"
     [results]="industry"
     [customColors]="customColors"
+    [valueFormatting]="formatIndustry"
   ></ngx-charts-tree-map>
 </div>
