--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
@@ -21,7 +21,7 @@
     <div class="list">
       <div class="search-btn">
         <div class="new-evnt-btn">
-            <button mat-raised-button color="primary" [routerLink]="['/add-event']"> + New Event</button>
+            <button mat-raised-button class="add-event" [routerLink]="['/add-event']">New Event</button>
         </div>
       </div>
       <mat-table #table [dataSource]="dataSource">
