--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -48,6 +48,8 @@
         <button mat-raised-button color="accent"  (click)='updateEventStatus("Ended")'>End Event</button>
         <br><br>
         <button mat-raised-button color="accent"  (click)='updateEventStatus("Not Started")'>Reset</button>
+        <br><br>
+        <button mat-raised-button color="accent" (click) = 'navigateHistoryPage()'>History</button>
 
       </div>
   </mat-sidenav-content>
