--- a/src/app/pages/add-event-page/add-event-page.component.scss
+++ b/src/app/pages/add-event-page/add-event-page.component.scss
@@ -1,3 +1,4 @@
+
 .toolbar{
     // border-bottom: solid 1px lightgray;
     position: fixed;
@@ -5,9 +6,9 @@
     width:100%;
     height: 2.4em;
     z-index:100;
-    background-color: #77878c;
+    background-color: #335c67c2;
     color: white;
-    box-shadow: 0px -20px 20px 0px rgba(0, 0, 0, 0.14), 0px -20px 20px 0px rgba(0, 0, 0, 0.12), 0px 5px 20px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 5px 20px 0px rgb(255, 108, 4);
 
     .navlogo{
       position: fixed;
