--- a/src/app/pages/go-live-page/go-live-page.component.html
+++ b/src/app/pages/go-live-page/go-live-page.component.html
@@ -1,17 +1,16 @@
-<!-- <div *ngIf="map && tables && trackings"> -->
-  <mat-grid-list cols="7" rowHeight="fit" class="go-live-container">
-
-    <mat-grid-tile [colspan]="4" [rowspan]="3">
+<mat-grid-list cols="7" rowHeight="fit" class="go-live-container">
+    <mat-grid-tile [colspan]="5" [rowspan]="3">
       <div *ngIf="map && participants && absentParticipants">
-        <app-d3-map-container [map]="map" [participants]="participants" [windowWidth]="windowWidth" [windowHeight]="windowHeight" ></app-d3-map-container>
+        <!-- <app-d3-map-container [map]="map" [participants]="participants" [windowWidth]="windowWidth" [windowHeight]="windowHeight" ></app-d3-map-container> -->
+        <app-map-image [windowWidth]="windowWidth" [windowHeight]="windowHeight"></app-map-image>
       </div>
-    </mat-grid-tile>
-    <mat-grid-tile [colspan]="3" [rowspan]="4" class="attendance-list">
+      </mat-grid-tile>
+    <mat-grid-tile [colspan]="2" [rowspan]="4" class="attendance-list">
       <div *ngIf="participants?.length !=0 && absentParticipants?.length !=0">
         <!-- <mat-list class="attendance-list-container"> -->
         <div class="attendance-list-container">
           <div class="attenance-list-grid">
-          <div *ngFor="let present of participants">
+          <!-- <div *ngFor="let present of participants">
             <div class="content">
               <mat-icon mat-list-icon class="participant-icon">bubble_chart</mat-icon>
               <div class="overlay-present">
@@ -21,14 +20,14 @@
                 </div>
             </div>
 
-            </div>
+            </div> -->
           </div>
 
         </div>
 
       </div>
     </mat-grid-tile>
-    <mat-grid-tile [colspan]="4" [rowspan]="1" >
+    <mat-grid-tile [colspan]="5" [rowspan]="1" >
       <div class="total-present-chart" *ngIf="participants && absentParticipants">
         <div class="circle-progress-individual">
           <div class="title">
@@ -83,6 +82,4 @@
         </mat-card-content>
       </mat-card>
     </mat-grid-tile> -->
-
   </mat-grid-list>
-<!-- </div> -->
