--- a/src/app/pages/history/history.component.html
+++ b/src/app/pages/history/history.component.html
@@ -1,3 +1,85 @@
-<p>
-  history works!
-</p>
+<mat-grid-list cols="7" rowHeight="fit" class="go-live-container">
+    <mat-grid-tile [colspan]="4" [rowspan]="3">
+      <div *ngIf="map && participants && absentParticipants">
+        <!-- <app-d3-map-container [map]="map" [participants]="participants" [windowWidth]="windowWidth" [windowHeight]="windowHeight" ></app-d3-map-container> -->
+        <app-map-image [windowWidth]="windowWidth" [windowHeight]="windowHeight" [participants]="participants"></app-map-image>
+      </div>
+      </mat-grid-tile>
+    <mat-grid-tile [colspan]="3" [rowspan]="4" class="attendance-list">
+      <div *ngIf="participants?.length !=0 && absentParticipants?.length !=0">
+        <!-- <mat-list class="attendance-list-container"> -->
+        <div class="attendance-list-container">
+          <div class="attenance-list-grid">
+          <div *ngFor="let present of participants">
+            <div class="content">
+              <mat-icon mat-list-icon class="participant-icon">bubble_chart</mat-icon>
+              <div class="overlay-present">
+                <div class="participant-image" [style.backgroundImage]="present.participant?.remark | safeHtml" >
+                </div>
+                <h2 class="participant-font">{{present.participant.participantName}}</h2>
+                </div>
+            </div>
+
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="4" [rowspan]="1" >
+      <div class="total-present-chart" *ngIf="participants && absentParticipants">
+        <div class="circle-progress-individual">
+          <div class="title">
+            Participants Present %
+          </div>
+          <circle-progress
+            [title]="'Present '"
+            [percent]="participants.length / (participants.length+absentParticipants.length)*100"
+            [radius]="60"
+            [space]="-10"
+            [outerStrokeWidth]="10"
+            [outerStrokeColor]="'#4882c2'"
+            [innerStrokeColor]="'#e7e8ea'"
+            [innerStrokeWidth] = "10"
+            [showSubtitle]="false"
+            [animation]="true"
+            [animationDuration]="300"
+            [clockwise]="false"
+          ></circle-progress>
+        </div>
+        <div class="circle-progress-individual">
+          <div class="title">
+            Total Tables
+          </div>
+          <circle-progress
+          [title] = "'11'"
+          [percent] = "'100'"
+          [radius]= "60"
+          [outerStrokeWidth]= "10"
+          [innerStrokeWidth]="5"
+          [showBackground]= "false"
+          [showUnits]="false"
+          [subtitle]="'Tables'"
+          ></circle-progress>
+        </div>
+
+      </div>
+    </mat-grid-tile>
+
+<!--
+    <mat-grid-tile [colspan]="1" [rowspan]="1">
+      <mat-card>
+        <mat-card-header class="closer-look-title">
+          Get A Closer Look
+        </mat-card-header>
+        <div class="image-container">
+          <img class="closer-look-image" src="https://s3-ap-southeast-1.amazonaws.com/com.viatick/bms/medias/1530005406059micheleAcuto.jpeg" width="50" height="50">
+        </div>
+        <mat-card-content class="closer-look-content">
+          <h2 class="closer-look-name">Name</h2>
+          <p class="closer-look-position">Professor of Mexican University Finance</p>
+        </mat-card-content>
+      </mat-card>
+    </mat-grid-tile> -->
+  </mat-grid-list>
