--- a/src/app/components/map-image/map-image.component.html
+++ b/src/app/components/map-image/map-image.component.html
@@ -3,10 +3,13 @@
     <!-- <img src="assets/map.jpeg" class="image"/> -->
     <div *ngFor="let participant of participants" class="participant-container"
     >
-    <div *ngIf="participant.coordinateX>0 && participant.coordinateY">
-      <img [src]="sanitizer.bypassSecurityTrustUrl(participant.participant.remark)" width="20" height="20"
+    <div *ngIf="participant.coordinateX>=0 && participant.coordinateY>=0">
+      <!-- <img [src]="sanitizer.bypassSecurityTrustUrl(participant.participant.remark)" width="20" height="20"
       [style.marginLeft.px]="participant.coordinateX*100/3"
-      [style.marginTop.px]="400 - participant.coordinateY*100/3">
+      [style.marginTop.px]="400 - participant.coordinateY*100/3"> -->
+      <div class="test" [style.marginLeft.px]="participant.coordinateX*200" [style.marginTop.px]="400-participant.coordinateY*200">
+        {{participant.participant.minor}}
+      </div>
     </div>
 
     </div>
