--- a/src/app/components/map-image/map-image.component.scss
+++ b/src/app/components/map-image/map-image.component.scss
@@ -7,6 +7,11 @@
     width: 100%;
     background-image: url("assets/map.jpeg");
     background-size: cover;
+    .test{
+      width: 20px;
+      height: 20px;
+      border: 1px solid black;
+    }
     .participant-container{
       position: absolute;
       img{
