--- a/src/app/pages/attendee-profile/attendee-profile.component.html
+++ b/src/app/pages/attendee-profile/attendee-profile.component.html
@@ -86,6 +86,10 @@
               </tr>
             </table>
 
+            <label class="btn btn-default">
+              <input type="file" (change)="selectFile($event)">
+            </label>
+
             <button mat-raised-button  type="button" name="button" color="primary" (click)="createNewAttendee()">Submit</button>
 
           </form>
