--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -76,7 +76,7 @@
         <ng-container matColumnDef="actions">
           <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
           <mat-cell *matCellDef="let element">
-            <button mat-stroked-button class="edit-dele-button" color="warn" (click)="deleteAttendee(element.participantName)">
+            <button mat-stroked-button class="edit-dele-button" color="warn" (click)="deleteAttendee(element.participantId)">
                      Delete
             </button>
           </mat-cell>
