--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -19,10 +19,10 @@
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'map']">Map Settings</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'go-live']">Go Live</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'go-live']" [disabled]="!inprogress">Go Live</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'analysis']">Analysis</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'analysis']" [disabled]="!ended">Analysis</button>
     </div>
 
     <!-- <div class="bottom-nav">
@@ -45,7 +45,7 @@
         <h3>Home</h3>
         <button mat-raised-button color="accent"  (click)='updateEventStatus("In-progress")'>Start Event</button>
         <br><br>
-        <button mat-raised-button color="accent"  (click)='updateEventStatus("Ended")'>End Event</button>
+        <button mat-raised-button color="accent"  (click)='updateEventStatus("Completed")'>End Event</button>
         <br><br>
         <button mat-raised-button color="accent"  (click)='updateEventStatus("Not Started")'>Reset</button>
         <br><br>
