--- a/src/app/pages/add-event-page/add-event-page.component.html
+++ b/src/app/pages/add-event-page/add-event-page.component.html
@@ -42,29 +42,29 @@
           <input matInput name="venue" class="" type="text" [(ngModel)] = "event.venue">
         </mat-form-field>
 
-        <br>
+        <!-- <br>
         <mat-form-field class="">
           <mat-label>Address</mat-label>
           <input matInput name="address" class="" type="text" [(ngModel)] = "event.eventaddress">
-        </mat-form-field>
+        </mat-form-field> -->
 
-        <br>
+        <!-- <br>
         <mat-form-field class="">
           <mat-label>City</mat-label>
           <input matInput name="city" class="" type="text" [(ngModel)] = "event.city">
-        </mat-form-field>
+        </mat-form-field> -->
 
-        <br>
+        <!-- <br>
         <mat-form-field class="">
           <mat-label>Country</mat-label>
           <input matInput name="country" class="" type="text" [(ngModel)] = "event.country">
-        </mat-form-field>
+        </mat-form-field> -->
 
-        <br>
+        <!-- <br>
         <mat-form-field class="">
           <mat-label>Postal</mat-label>
           <input matInput name="postal" class="" type="text" [(ngModel)] = "event.postalCode">
-        </mat-form-field>
+        </mat-form-field> -->
 
         <!-- <br>
         Avatar <br>
