--- a/src/app/components/map-image/map-image.component.scss
+++ b/src/app/components/map-image/map-image.component.scss
@@ -3,7 +3,7 @@
   .image-layout{
     height: 100%;
     width: 100%;
-    background-image: url("assets/map.jpeg");
+    // background-image: url("assets/map.jpeg");
     background-size: cover;
     .test{
       width: 20px;
