--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -34,36 +34,63 @@
     <app-toolbar [eventStatus]=eventStatus></app-toolbar>
     <div class="page-content">
       <h3>Map Settings</h3>
+
+
       <div>
         <!-- <button mat-button (click)="createAMap()">Draw A Map</button> -->
-          <mat-form-field>
+          <mat-form-field class="align-map">
             <input matInput placeholder="Height" [(ngModel)]="map.height" [ngModelOptions]="{standalone: true}">
           </mat-form-field>
-          <mat-form-field>
+          <mat-form-field class="align-map">
             <input matInput placeholder="Width" [(ngModel)]="map.width" [ngModelOptions]="{standalone: true}">
           </mat-form-field>
+          <label class="align-map">
+            <input type="file" (change)="selectFile($event)">
+          </label>
+          <button class="align-map" mat-raised-button color="accent" (click)="saveMap()">Save The Map</button>
+
       </div>
-        <!-- <app-d3-map-container [map]="map" [tables]="tables" [windowWidth]="windowWidth" [windowHeight]="windowHeight" [participants]="participants"></app-d3-map-container> -->
-      <div class="customization">
-        <div *ngFor="let table of tables ; index as i">
-          Table {{i+1}}
-          <mat-form-field>
-            <input matInput placeholder="Table X" [(ngModel)]="table.tableX">
-          </mat-form-field>
-          <mat-form-field>
-            <input matInput placeholder="Table Y" [(ngModel)]="table.tableY">
-          </mat-form-field>
-          <mat-form-field>
-            <input matInput placeholder="Table Mac" [(ngModel)]= "table.mac">
-          </mat-form-field>
-          <button mat-icon-button (click)="removeTable(i)">
-            <mat-icon>clear</mat-icon>
-          </button>
+      <div class="bottom">
+        <div class="map-image" *ngIf="map.width != 0 && map.height !=0">
+          <div class="image-container" [style.width.px]="map.width * ratio"
+                                        [style.height.px]="map.height * ratio" class="image-contiainer">
+              <div *ngIf="map.scale.length >2" class="image-url-contain">
+                <img [src]="sanitizer.bypassSecurityTrustUrl(map.scale)" class="image" />
+              </div>
+              <!-- <div *ngIf="tables.length>0">
+                <div *ngFor="let table of tables">
+                  <div class="reader-image" [style.marginTop.px]="-table.tableY*ratio-10" [style.marginLeft.px]="table.tableX*ratio-10">
+                      {{table.tableId}}
+                  </div>
+                </div>
+              </div> -->
+          </div>
+        </div>
+          <!-- <app-d3-map-container [map]="map" [tables]="tables" [windowWidth]="windowWidth" [windowHeight]="windowHeight" [participants]="participants"></app-d3-map-container> -->
+        <div class="customization">
+          <button mat-raised-button color="accent" (click)="addTable()">Add Reader</button>
+
+          <div *ngFor="let table of tables ; index as i " class="tables">
+            <div class="reader-label">
+              Reader {{i+1}}
+            </div>
+
+            <mat-form-field>
+              <input matInput placeholder="Reader X" [(ngModel)]="table.tableX">
+            </mat-form-field>
+            <mat-form-field>
+              <input matInput placeholder="Reader Y" [(ngModel)]="table.tableY">
+            </mat-form-field>
+            <mat-form-field>
+              <input matInput placeholder="Reader Mac" [(ngModel)]= "table.mac">
+            </mat-form-field>
+            <button mat-icon-button (click)="removeTable(i)">
+              <mat-icon>clear</mat-icon>
+            </button>
+          </div>
         </div>
       </div>
       <div>
-        <button mat-button (click)="addTable()">Add Table</button>
-        <button mat-button (click)="saveMap()">Save The Map</button>
       </div>
     </div>
   </mat-sidenav-content>
